# django-routes

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
django_routes/: routes.py
routes/: routes.py
