[tool.poetry]
name = "django-routes"
version = "2023.2.0"
description = "A simple? script to display routes in Django"
authors = ["David Nugent <davidn@uniquode.io>"]
readme = "README.md"
packages = [{include = "routes"}]

[tool.poetry.dependencies]
python = "^3.9"
django = ">= 3.1, >= 4.1"
django-extensions = ">= 3.2"
django-settings-env = ">= 4.3"

[tool.poetry.scripts]
routes = "routes.routes:main"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
black = "^23.7.0"
isort = "^5.12.0"
ruff = "^0.0.285"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
