[project]
name = "django-routes"
version = "2024.2.0"
description = "A simple? script to display routes in Django"
authors = [
  { name = "David Nugent", email = "davidn@uniquode.io" }
]
readme = "README.md"
license = {text = "MIT"}
packages = [{include = "routes"}]
requires-python = ">=3.10"
dependencies = [
  "django >= 4.1",
  "django-extensions >= 3.2",
  "django-settings-env >= 4.3"
]
scripts = { routes = "django_routes.routes:main" }

[build-system]
requires = ["flit-core"]
build-backend = "flit_core.buildapi"
